# SMARTS

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.sh  Dockerfile  Dockerfile.minimal  LICENSE  MANIFEST.in  Makefile  NOTICE  OPEN_SOURCE_SOFTWARE_NOTICE  Prod.Dockerfile  README.md  README_pypi.md  Singularity  THIRD_PARTY_OPEN_SOURCE_SOFTWARE_NOTICE  Untitled.ipynb  batch_crash_trial.sh  batched_crash_trial.sh  bugtest.Dockerfile  bugtest_requirements.txt  competition_agent_demo.py  convert_waymo_map.py  crash_trial.sh  docstring_check_result.txt  engine.ini  gen_header.sh  grid_map.npy  header_test.sh  install_deps.sh  line_intersections.py  minimal.Dockerfile  output  output.txt  (+24 more)
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  help-request.md  help_request.yml
.github/workflows/: cd-docker.yml  cd-pypi.yml  ci-auto-commit-linux.yml  ci-auto-commit-mac.yml  ci-base-tests-linux.yml  ci-base-tests-mac.yml  ci-base-tests.yml  ci-dependencies-linux.yml  ci-dependencies-mac.yml  ci-format.yml  ci-formatting-and-dependencies.yml  ci-formatting.yml  ci-header-test.yml  ci-mac.yml  ci-master.yml  ci-on_failure.yml  ci-pull-request.yml  ci-python-version-test.yml  ci-requirements.yml  ci-smarts-run-ultra-tests.yml  ci-test-header.yml  ci-test-learning.yml  ci-test-long-determinism.yml  ci-test-memory-growth.yml  ci-ultra-rl-package-tests.yml  ci-ultra-tests.yml  ci.yml
baselines/competition/: competition_env.py  example.py  offline_competition_env.py  offline_example.py  record_trajectories.py
baselines/driving_smarts/: agent_config.yaml  benchmark.py  demo_observation_space.py  example.py
baselines/ilswiss_minimal/: setup.py
baselines/marl_benchmark/: README.md  __init__.py  common.py  evaluate.py  rule_based_run.py  run.py  setup.py
benchmark/: README.md  __init__.py  common.py  default_model.py  evaluate.py  rule_based_run.py  run.py  setup.py
benchmark/agents/: __init__.py  common.py
benchmark/metrics/: __init__.py  basic_handler.py  basic_metrics.py  behavior_analysis.py  handlers.py  metrics.py  plot.py
benchmark/networks/: __init__.py  centralized_ac.py  commnet.py  communicate.py
benchmark/utils/: episode_log.py  format.py  plot.py  rollout.py
cases/marl_benchmark/: README.md  (+2 more)
cli/: __init__.py  benchmark.py  cli.py  diagnostic.py  envision.py  experiments.py  run.py  studio.py  ultra.py  waymo.py  zoo.py
competition/: Makefile  README.md  ToDo.py  todo.py
crash_0/: agent_007_0_0  agent_oa_3_0
crash_test/: agent_007_0_0  agent_kla_1_0  agent_oa_3_0  agent_oa_4_0  agent_oa_5_0  agent_oa_6_0
distributed/: actor.py  learner.py  run.sh
docker/: run_local.sh  server_entrypoint.sh
docs/: CONTRIBUTING.md  Makefile  README.md  SUMO_TROUBLESHOOTING.md  conf.py  create_cli_docs.py  cutin-uturn-doc.rst  index.rst  minimal.py  minimal_agent.py  minimal_agent_policy.py  minimal_scenario_studio.py  quickstart.rst  readme.rst  requirements.readthedocs.txt  setup.rst  spelling_wordlist.txt
envision/: README.md  __init__.py  client.py  client_config.py  data_format.py  data_formatter.py  etypes.py  serialization.py  server.py  types.py
examples/: 1_egoless.py  2_single_agent.py  3_multi_agent.py  4_environment_config.py  5_agent_zoo.py  5_experiment_base.py  6_agent_action_space.py  6_experiment_base.py  7_experiment_base.py  7_parallel_environment.py  8_notebook.ipynb  9_notebook.ipynb  __init__.py  argument_parser.py  bubble_capture_test.py  bubble_example.py  bugtest.py  control.py  cutin_agent.py  cutoff.py  demo.ipynb  demo.py  demo_mock.ipynb  demo_test.py  dummy_agent.py  dynamic_history_vehicles_replacement.py  e1_egoless.py  e2_single_agent.py  e3_multi_agent.py  e4_environment_config.py  e5_agent_zoo.py  e6_agent_action_space.py  e7_experiment_base.py  e8_parallel_environment.py  e9_notebook.ipynb  ego_open_agent.py  egoless.py  envtester.py  game_of_tag.py  history_vehicles_replacement_for_imitation_learning.py  (+32 more)
examples/rl/platoon/inference/: __init__.py  setup.cfg
examples/rl/platoon/inference/contrib_policy/: filter_obs.py  format_action.py  frame_stack.py  helper.py  make_dict.py  policy.py
examples/rl/proximal_policy_optimization/inference/: setup.cfg  utils.py
papers/CRITERIA/: .gitignore  LICENSE  README.md  pyproject.toml
papers/CRITERIA/examples/: compute_single_metric_result.py  compute_single_scenario_result.py  models_metrics_results_structure.py  scenario_metric_extract.py
papers/CRITERIA/src/CRITERIA/compute_metrics/: compute_metric_result.py  group_result.py  preprocess_argoverse.py
papers/CRITERIA/src/CRITERIA/resources/: CRITERIA.toml  __init__.py  list.py
papers/CRITERIA/src/CRITERIA/scene_classification/: group_classify.py  scenario_difficulty_classify.py  scenario_distance_classify.py  scenario_intersect_classify.py  scenes_result.py  weighted_difficulty_result.py
papers/CRITERIA/src/CRITERIA/utils/: common.py  gen_vis_map.py  get_dict.py  metrics.py  pickle2json.py  scene_metric.py
replay_0/: agent_007_0_0  agent_oa_3_0
replay_1/: agent_007_0_0  agent_oa_3_0
smarts/: __init__.py  engine.ini
temporary/: clicktest.py
tests/: test_examples.py  test_setup.py
tools/: interaction_dataset_converter.py  pybullet_linear_tire_example.py  pybullet_sumo_orientation_example.py  pybullet_trajectory_example.py  pybullet_vehicle_example.py  regression_rllib.py  stress_sumo.py  sumo_multi_clients.py
ultra/: Dockerfile  Dockerfile.deps  LICENSE  MANIFEST.in  Makefile  README.md  agent_pool.json  config.yaml  df  entrypoint.sh  evaluate.py  gen_header.sh  header_test.sh  install.sh  install_deps.sh  nohup.out  rllib_train.py  setup.py  train.py
upgrade_to_cfg/: setup.cfg  setup.py
waymo_open_dataset/: README.md
zoo/: CONTRIBUTING.md  Makefile  README.md  run_tests.sh
zoo/policies/discrete_soft_actor_critic/: setup.cfg
zoo/policies/interaction_aware_motion_prediction/: README.md  observation.py  planner.py  planner_utils.py  policy.py  predictor.py  setup.cfg  setup.py
(+2960 files in other folders)
