[tool.poetry]
name = "smarts"
version = "0.4.18"
description = "Scalable Multi-Agent RL Training School"
authors = ["qianyi-sun <sqy201x@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
setuptools = "^60.2.0"
cached-property = "^1.5.2"
click = "^8.0.3"
gym = "^0.21.0"
numpy = "^1.19.5"
pandas = ">=1.0.0"
psutil = "^5.9.0"
pybullet = "^3.2.1"
pynput = "^1.7.6"
rich = "^10.16.2"
Rtree = "^0.9.7"
sh = "^1.14.2"
Shapely = "^1.8.0"
scikit-learn = "^1.0.2"
tableprint = "^0.9.1"
trimesh = "^3.9.39"
visdom = "^0.1.8"
yattag = "^1.14.0"
cloudpickle = "^2.0.0"
tornado = "^6.1"
websocket-client = "^1.2.3"
ijson = "^3.1.4"
matplotlib = "^3.5.1"
scikit-image = "^0.19.1"
grpcio = "^1.32.0"
protobuf = "^3.19.1"
PyYAML = "^6.0"
Twisted = "^21.7.0"
ipykernel = {version = "^6.6.1", optional = true}
jupyter-client = {version = "^7.1.0", optional = true}
pytest = {version = "^6.2.5", optional = true}
pytest-benchmark = {version = "^3.4.1", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}
pytest-notebook = {version = "^0.6.1", optional = true}
pytest-xdist = {version = "^2.5.0", optional = true}
ray = {extras = ["rllib"], version = "^1.9.1", optional = true}
tensorflow = {version = ">=2.2.0", optional = true}
scipy = {version = "^1.4.1", optional = true}
torch = {version = "^1.10.1", optional = true}
torchvision = {version = "^0.11.2", optional = true}
Panda3D = {version = "^1.10.10", optional = true}
panda3d-gltf = {version = "^0.13", optional = true}
catkin-pkg = {version = "^0.4.24", optional = true}
rospkg = {version = "^1.3.0", optional = true}
waymo-open-dataset-tf-2-2-0 = {version = "^1.3.1", optional = true}


[tool.poetry.dev-dependencies]
black = "^20.8b1"
grpcio-tools = "^1.32.0"
isort = "^5.10.1"
Sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-apidoc = "^0.3.0"

[tool.poetry.extras]
test = ["ipykernel",
            "jupyter-client",
            "pytest",
            "pytest-benchmark",
            "pytest-cov",
            "pytest-notebook",
            "pytest-xdist",
            "tensorflow"]  # For rllib tests

train = ["ray[rllib]",'scipy','tensorflow','torch','torchvision']

camera-obs = ['Panda3D','panda3d-gltf']

ros = ['catkin_pkg','rospkg']
waymo = ['waymo-open-dataset-tf-2-2-0']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scl = "cli.cli:scl"

#TODO: include_package_data, zip_safe, entry_points