[metadata]
name=smarts
version=0.4.18
author_email=montgomery.alban@huawei.com
description=Scalable Multi-Agent RL Training School
long_description=file:utils/setup/README.pypi.md
long_description_content_type=text/markdown
url=https://github.com/huawei-noah/SMARTS
license=MIT
classifiers=
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
zip_safe = True

[options.packages.find]
exclude =
    tests
    examples

[aliases]
test=pytest