[metadata]
name = smarts
version = 1.1.0
url = https://github.com/huawei-noah/SMARTS
long_description = file:utils/setup/README.pypi.md
long_description_content_type = text/markdown
license=MIT
classifiers=
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
zip_safe = True
python_requires = >=3.8
install_requires = 
    # setuptools:
    #   tensorboard needs >=41
    #   50.0 is broken: https://github.com/pypa/setupatools/issues/2353
    setuptools>=41.0.0,!=50.0
    click>=7.1.2  # used in scl
    # numpy>=1.19.5 required for tf 2.4
    # numpy<1.24 required for ray (see https://github.com/ray-project/ray/issues/31258)
    numpy>=1.19.5,<1.24.0
    psutil>=5.4.8
    shapely>=2.0.0
    tableprint>=0.9.1
    trimesh==3.9.29  # for writing .glb files
    yattag>=1.14.0 # for scenario studio
    PyYAML>=3.13
    twisted>=21.7.0 # for scenario requirements.txt files

    # The following are planned to be made optional
    eclipse-sumo>=1.12.0  # sumo
    Rtree>=0.9.7 # technically optional, but used by sumo internally for performance (see `getNeighboringLanes()`)
    gymnasium==0.27.0
    pybullet>=3,<4.0
    protobuf>=3.17.3,<4.0.0 # for /smarts/zoo and remote agents

    # The following are planned for removal
    gym>=0.17.3,<=0.19.0
    cloudpickle>=1.3.0,<=2.1.0
    scipy

[options.packages.find]
exclude =
    tests
    examples

[options.entry_points]
console_scripts = 
    scl=cli.cli:scl

[options.extras_require]
diagnostic = 
    py-cpuinfo==9.0.0
    mdutils==1.4.0
    gym>=0.17.3,<=0.19.0
    matplotlib>=3.2.2
camera_obs = 
    Panda3D==1.10.9
    panda3d-gltf==0.13
dev = 
    black[jupyter]==22.6.0
    ipython>=7.8.0,<8.13.0 # from black[jupyter]: ipython 8.13.0 requires Python 3.9
    grpcio-tools==1.32.0
    isort==5.7.0
    pre-commit==2.16.0
    pylint>=2.12.2
    pytype==2023.04.18
doc = 
    myst-parser>=0.18.1
    sphinx>=5.3.0
    sphinxcontrib-apidoc>=0.3.0
    sphinx-click>=4.4.0
    sphinx-rtd-theme>=1.1.1
envision =
    tornado>=5.1.1
    websocket-client>=1.2.1
    ijson>=3.1.4
extras = pynput>=1.7.4  # Used by HumanKeyboardAgent
gym = 
    moviepy == 1.0.3
remote_agent = 
    grpcio==1.32.0
rllib = 
    opencv-python==4.1.2.30
    opencv-python-headless==4.1.2.30
    ray[rllib]==1.4.0
ray = 
    ray~=2.2.0
ros = 
    catkin_pkg
    rospkg
test = # The following are for testing
    pytest>=6.2.5
    pytest-benchmark>=3.4.1
    pytest-cov>=3.0.0
    pytest-xdist>=2.4.0
    pytest-forked>=1.4.0
test_notebook = 
    ipykernel>=4.10.1
    jupyter-client>=7.1.2
    pytest-notebook>=0.7.0
torch = 
    torch==1.4.0
    torchvision==0.5.0
train = 
    tensorflow>=2.4.0
argoverse = 
    av2>=0.2.1
    Rtree>=0.9.7
opendrive = 
    opendrive2lanelet>=1.2.1
    Rtree>=0.9.7
waymo = 
    matplotlib>=3.2.2
    protobuf>=3.17.3, <4.0.0
    Rtree>=0.9.7
visdom =
    visdom>=0.1.8.9
all =
    %(diagnostic)s
    %(camera_obs)s
    %(dev)s
    %(doc)s
    %(envision)s
    %(extras)s
    %(gym)s
    %(remote_agent)s
    %(rllib)s
    # %(ray)s # incompatible with [rllib] for now
    %(ros)s
    %(test)s
    %(test_notebook)s
    %(torch)s
    %(train)s
    %(argoverse)s
    %(opendrive)s
    %(waymo)s
    %(visdom)s

[aliases]
test=pytest
