[metadata]
name = smarts
version = 1.4.0
url = https://github.com/huawei-noah/SMARTS
long_description = file:README.md
long_description_content_type = text/markdown
license=MIT
classifiers=
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
zip_safe = True
python_requires = >=3.8
install_requires = 
    setuptools>=41.0.0,!=50.0
    click>=7.1.2  # used in scl
    # numpy>=1.19.5 required for tf 2.4
    numpy>=1.19.5
    psutil>=5.4.8
    shapely>=2.0.0
    tableprint>=0.9.1
    trimesh>=3.9.29  # for writing .glb files
    scipy # This is still needed for writing .glb files...
    yattag>=1.14.0 # for scenario studio
    PyYAML>=3.13
    twisted>=21.7.0 # for scenario requirements.txt files

    pybullet>=3,<4.0 # planned to be made optional (For >3.9 this requires python3.<ver>-dev)
    cloudpickle>=1.3.0 # planned for removal

[options.packages.find]
exclude =
    tests
    examples

[options.entry_points]
console_scripts = 
    scl=cli.cli:scl

[options.extras_require]
argoverse = 
    av2>=0.2.1
    Rtree>=0.9.7
camera_obs = 
    Panda3D>=1.10.13
    panda3d-gltf==0.13
dev = 
    black[jupyter]==22.6.0
    ipython>=7.8.0,<8.13.0 # from black[jupyter]: ipython 8.13.0 requires Python 3.9
    grpcio-tools==1.32.0
    isort==5.7.0
    pre-commit==2.16.0
    pylint>=2.12.2
    pytype==2023.04.18
diagnostic = 
    py-cpuinfo==9.0.0
    mdutils==1.4.0
    matplotlib>=3.2.2
doc = 
    myst-parser>=0.18.1
    sphinx>=5.3.0
    sphinxcontrib-apidoc>=0.3.0
    sphinxcontrib-spelling>=8.0.0
    sphinx-click>=4.4.0
    sphinx-rtd-theme>=1.1.1
envision =
    tornado>=5.1.1
    websocket-client>=1.2.1
    ijson>=3.1.4
examples = 
    hydra-core
    %(gymnasium)s
    %(sumo)s
extras = pynput>=1.7.4  # Used by HumanKeyboardAgent
gif_recorder = 
    moviepy == 1.0.3
gymnasium =
    gymnasium>=0.26.3
opendrive = 
    opendrive2lanelet>=1.2.1
    Rtree>=0.9.7
rllib = 
    opencv-python>=4.1.2.30,<5.0
    opencv-python-headless>=4.1.2.30,<5.0
    ray[rllib]~=2.5.0
    tensorflow-probability
ray = 
    ray~=2.5.0
ros = 
    catkin_pkg
    rospkg
sumo =
    eclipse-sumo>=1.12.0
    Rtree>=0.9.7 # technically optional, but used by sumo internally for performance (see `getNeighboringLanes()`)
test = # The following are for testing
    pytest>=6.2.5
    pytest-benchmark>=3.4.1
    pytest-cov>=3.0.0
    pytest-xdist>=2.4.0
    pytest-forked>=1.4.0
test_notebook = 
    ipykernel>=4.10.1
    jupyter-client>=7.1.2
    pytest-notebook>=0.7.0
torch = 
    torch>=1.4.0
    torchvision>=0.5.0
train = 
    tensorflow>=2.4.0
visdom =
    visdom>=0.1.8.9
waymo = 
    matplotlib>=3.2.2
    protobuf>=3.17.3, <4.0.0
    Rtree>=0.9.7
all =
    %(argoverse)s
    %(camera_obs)s
    %(dev)s
    %(diagnostic)s
    %(doc)s
    %(envision)s
    %(examples)s
    %(extras)s
    %(gif_recorder)s
    %(gymnasium)s
    %(opendrive)s
    %(ray)s
    %(rllib)s
    %(ros)s
    %(sumo)s
    %(test)s
    %(test_notebook)s
    %(torch)s
    %(train)s
    %(visdom)s
    %(waymo)s

[aliases]
test=pytest
