[metadata]
name = smarts
description = Scalable Multi-Agent RL Training School
version = 0.4.18

[options]
packages = find:
include_package_data = True
zip_safe = True
python_requires = >=3.7
install_requires =
    setuptools>=41.0.0,!=50.0
    cached-property>=1.5.2
    click>=8.0.3
    gym==0.18.3
    numpy>=1.19.5
    pandas>=1.3.4
    psutil>=5.8.0
    pybullet==3.0.6
    pynput>=1.7.4
    rich>=10.13.0
    rtree>=0.9.7
    sh>=1.14.2
    shapely>=1.8.0
    scikit-learn>=1.0.1
    tableprint>=0.9.1
    trimesh==3.9.29
    visdom>=0.1.8.9
    yattag>=1.14.0
    cloudpickle>=1.3.0,<1.4.0
    tornado>=6.1
    websocket-client>=1.2.1
    ijson>=3.1.4
    matplotlib>=3.4.3
    scikit-image>=0.18.3
    grpcio==1.32.0
    protobuf>=3.19.1
    PyYAML>=6.0
    twisted>=21.7.0

[options.packages.find]
exclude =
    tests
    examples

[options.entry_points]
console_scripts =
    scl=cli.cli:scl

[options.extras_require]
test =
    ipykernel>=6.5.0
    jupyter-client==6.1.12
    pytest>=6.2.5
    pytest-benchmark>=3.4.1
    pytest-cov>=3.0.0
    pytest-notebook>=0.6.1
    pytest-xdist>=2.4.0
    ray[rllib]==1.0.1.post1
    tensorflow>=2.4.0
train =
    ray[rllib]==1.0.1.post1
    scipy==1.4.1
    tensorflow>=2.4.0
    torch==1.4.0
    torchvision==0.5.0
dev =
    black==20.8b1
    grpcio-tools==1.32.0
    isort==5.7.0
    sphinx
    sphinx-rtd-theme
    sphinxcontrib-apidoc
camera-obs =
    Panda3D==1.10.9
    panda3d-gltf==0.13
ros =
    catkin_pkg
    rospkg
waymo = waymo-open-dataset-tf-2-2-0
