[metadata]
name = smarts_agent_iamp
version = 0.1.0
url = https://github.com/huawei-noah/SMARTS
description = SMARTS zoo agent.
long_description = Interaction-aware Motion Prediction trained agent. See [SMARTS](https://github.com/huawei-noah/SMARTS).
long_description_content_type=text/markdown
classifiers=
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
zip_safe = True
python_requires = == 3.8.*
install_requires = 
    smarts==1.0.3
    gym==0.19.0
    matplotlib==3.5.2
    numpy==1.23.1
    packaging==21.3
    protobuf==3.20.1
    psutil==5.9.1
    pyzmq==23.2.0
    ruamel.yaml==0.17.17
    ruamel.yaml.clib==0.2.6
    scipy==1.8.1
    stable-baselines3==1.4.0
    tensorboard==2.2.0
    tensorboard-plugin-wit==1.8.1
    torch==1.12.0
    torchfile==0.1.0