[metadata]
name = smarts_agent_ppo
version = 0.1.0
url = https://github.com/huawei-noah/SMARTS
description = SMARTS zoo agent.
long_description = Trained Proximal Policy Optimization agent. See [SMARTS](https://github.com/huawei-noah/SMARTS).
long_description_content_type=text/markdown
classifiers=
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
zip_safe = True
python_requires = == 3.8.*
install_requires = 
    setuptools==65.4.0
    stable-baselines3==1.7.0
    tensorboard==2.12.0
    torch==1.13.1
    torchinfo==1.7.2
